# FImg

./: .gitignore  CMakeLists.txt  README.md
VSBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp.hint  genetic-drawer.sln  genetic-drawer.vcxproj  genetic-drawer.vcxproj.filters
VSBuild/Debug/: genetic-drawer.ilk
VSBuild/RelWithDebInfo/: genetic-drawer.ilk
VSBuild/Release/output/demo/: 100.raw  1000.raw  2000.raw  300.raw  3000.raw  3700_5min.raw
VSBuild/genetic-drawer.dir/Debug/genetic-drawer.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VSBuild/genetic-drawer.dir/RelWithDebInfo/genetic-drawer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VSBuild/genetic-drawer.dir/Release/genetic-drawer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  (+5 more)
VSBuild/input/: Raw-Lenna-256-greyscale.raw  Raw-Lenna-256-rgb.raw
images/: eir_820_312.raw  genetic.raw  genetic_g.raw
include/: Arguments.hpp  Color.hpp  GeneticDrawer.hpp  GeneticDrawer.hpp.gch  GreyscaleColor.hpp  GreyscaleDrawer.hpp  GreyscaleRawImage.hpp  IColor.hpp  RGBColor.hpp  RawImage.hpp
output/: 0.raw  100.raw
src/: Arguments.cpp  CMakeLists.txt  GeneticDrawer.cpp  GreyscaleDrawer.cpp  GreyscaleRawImage.cpp  geneticImage.cpp  main.cpp  pngAnalysis.cpp  populationBasedGeneticImg.cpp  populationGeneticImg.cpp  rawToGray.cpp  temp.cpp
(+7 files in other folders)
